# microservices-arch

./: .gitignore  README.md  docker-compose.yml  makefile  pyproject.toml
alembic/: env.py
alembic/versions/: ad4c8b1e256d_recreate_the_missing_table.py  f2b52df1eb5a_create_users_table.py  fe3d5897ec62_fix_password_column_to_use_bytea.py
app/: main.py
app/core/: config.py  database.py  exceptions.py
app/models/: __init__.py  base.py  user.py
app/schemas/: user.py
app/services/: auth_service.py
authentication-service/: .dockerignore  README.md  authentication-service.dockerfile  makefile  pyproject.toml  requirements.txt
authentication-service/alembic/: env.py
authentication-service/app/core/: exceptions.py
authentication-service/app/models/: base.py
authentication-service/app/services/: auth_service.py  token_service.py  user_service.py
authentication-service/tests/: conftest.py
authentication-service/tests/integration/: test_auth.py
backend/alembic/versions/: 30fd62e2eaa9_initial_migration.py
backend/app/: main.py
backend/app/core/: config.py  database.py  logger.py
backend/app/interfaces/: auth.py
backend/app/models/: __init__.py  user.py
backend/app/schemas/: user.py
backend/app/services/: auth_service.py
backend/requirements/: base.txt
backend/tests/: conftest.py
broker-service/: .dockerignore  go.mod  go.sum
broker-service/cmd/api/: main.go
broker-service/internal/config/: config.go
broker-service/internal/models/: auth.go
requirements/: base.txt  dev.txt
tests/: conftest.py
tests/integration/: test_auth.py
(+9 files in other folders)
